# beat-it

./: .clang-format  .clangd  .dockerignore  .gitignore  CMakeLists.txt  DAILY_WORKFLOW.md  Dockerfile  Dockerfile.rocm  INFRASTRUCTURE_SETUP.md  Makefile  OPTUNA_TRADEOFF.md  README.md  RUNPOD_DEPLOYMENT.md  allocator.cpp  allocator.h  alphazero.cpp  alphazero.h  arena-platforms.txt  build.sh  compile_commands.json  evaluation.h  exception.h  game.cpp  game.h  inference.h  lib_interface.cpp  libtorch_util.cpp  libtorch_util.h  main.cpp  match.h  minimax-tree.h  minimax.cpp  minimax.h  montecarlo.h  mp_game.cpp  mp_game.h  mp_mcts.h  nim.cpp  nim.h  node.h  (+17 more)
games/: montecarlo.h  nim.cpp  nim.h  tic_tac_toe.cpp  tic_tac_toe.h  tron.cpp  tron.h  ultimate_ttt.cpp  ultimate_ttt.h
gui/beat_it_gui/: README.md  pubspec.yaml
gui/beat_it_gui/android/app/: build.gradle.kts
gui/beat_it_gui/android/app/src/main/: AndroidManifest.xml
gui/beat_it_gui/android/app/src/main/kotlin/com/example/beat_it_gui/: MainActivity.kt
gui/beat_it_gui/ios/Runner/: Info.plist
gui/beat_it_gui/ios/Runner.xcodeproj/: project.pbxproj
gui/beat_it_gui/lib/: main.dart
gui/beat_it_gui/linux/: CMakeLists.txt
gui/beat_it_gui/linux/runner/: my_application.cc
gui/beat_it_gui/macos/Runner.xcodeproj/: project.pbxproj
gui/beat_it_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
gui/beat_it_gui/macos/Runner/Configs/: AppInfo.xcconfig
gui/beat_it_gui/web/: index.html  manifest.json
gui/beat_it_gui/windows/: CMakeLists.txt
gui/beat_it_gui/windows/runner/: Runner.rc  main.cpp
ologs/: alphazero.gv  game.gv  minimax.gv  olog.gv  primitives.gv  selfplay.gv
train/: __init__.py  alphazero_cnn.py  main.py  opt_selfplay.py  optimize.py  requirements.txt  ttt.py  ttt_cnn.py  ttt_config.json  ttt_training.py  utils.py  uttt.py  uttt_config.json  uttt_config_debug.json  uttt_config_org.json
